minor fix to footer layout on tablet devices

--- a/assets/scss/components/_hero.scss
+++ b/assets/scss/components/_hero.scss
@@ -137,7 +137,7 @@
 
 .parent-page-about .hero--small {
   background-position: bottom;
-  height: 300px; 
+  height: 400px; 
 
   &__image {
     position: absolute;
@@ -145,9 +145,5 @@
     left: 50%;
     transform: translate(-50%, -50%);
     max-width: 300px;
-  }
-
-  @include breakpoint(md) {
-    height: 400px; 
   }
 }
